# sidecar

./: Cargo.toml  LICENSE  README.md
docs/: sidecar-interaction.txt
src/: child.rs  child_watcher.rs  client.rs  debug.rs  guards.rs  main.rs  messages.rs  pipe.rs  runtime.rs  server.rs  signals.rs  socket.rs  stop.rs  system.rs  tty.rs
src/net/: error.rs  events.rs  framed.rs  mod.rs  recv.rs  recvmsg.rs  send.rs  sendmsg.rs  socket.rs
src/raw/: accept.rs  blocking.rs  connect.rs  events.rs  fd.rs  fdtransfer.rs  flags.rs  mod.rs  ops.rs  reactor.rs
src/server/: child.rs  mod.rs  process.rs  session.rs  start.rs
