[package]
name = "sidecar"
version = "1.1.0"
authors = ["Andrey Bushev <hlam-box@yandex.ru>"]
description = "Passing command to sidecar containers"
edition = "2018"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
debug-assertions = false
debug = false
rpath = false

[dependencies]
clap = { version = "2", default_features = false, features = ["vec_map"]}
log = { version = "0.4", features = ["std"]}
bitflags = "1.1.0"
scopeguard = "1"
rent_to_own = "0.1.0"
state_machine_future = "0.2.0"
nix = "0.13"
serde = "*"
serde_derive = "*"
rmp-serde = "0.13"
bytes = "0.4"
futures = "0.1"
mio = "0.6"
tokio = "0.1"
tokio-codec = "0.1"
tokio-reactor = "0.1"
tokio-process = "0.2"
signal-hook = { version = "0.1", features = ["tokio-support"]}
