[package]
name = "sidecar"
version = "1.2.0"
authors = ["Andrey Bushev <hlam-box@yandex.ru>"]
description = "Passing command to sidecar containers"
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
debug = false
debug-assertions = false

[dependencies]
log = { version = "0.4", features = ["std"] }
gumdrop = "0.6"
libc = "0.2"
nix = "0.15"
bitflags = "1.1"
scopeguard = "1"
lazy_static = "*"
serde = { version = "1", features = ["derive"] }
bincode = "1.0"
futures-preview = { version = "=0.3.0-alpha.18" }
futures-util-preview  = { version = "=0.3.0-alpha.18" }
mio = { version = "0.6", default-features = false }
mio-uds = "*"
signal-hook-registry = "*"
tokio-io = { version = "0.2.0-alpha.5", default-features = false }
tokio-net = { version = "0.2.0-alpha.5", default-features = false, features = ["signal"] }
tokio-executor = { version = "0.2.0-alpha.5", default-features = false, features = ["current-thread"] }
tokio-timer = { version = "0.3.0-alpha.5", default-features = false }

[patch."crates-io"]
tokio-net = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-executor = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
