[package]
name = "sidecar"
version = "1.2.0"
authors = ["Andrey Bushev <hlam-box@yandex.ru>"]
description = "Passing command to sidecar containers"
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
debug = false
debug-assertions = false

[dependencies]
log = { version = "0.4", features = ["std"] }
gumdrop = "0.6"
libc = "0.2"
nix = "0.15"
bitflags = "1.1"
scopeguard = "1"
lazy_static = "*"
serde = { version = "1", features = ["derive"] }
bincode = "1.0"
futures = { version = "0.3" }
mio = { version = "0.6", default-features = false }
mio-uds = "*"
signal-hook-registry = "*"

[dependencies."tokio"]
version = "0.2"
default-features = false
features = ["rt-core", "io-driver", "signal"]
